--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="style.css">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
+    <!-- custom css -->
+    <link rel="stylesheet" href="style.css">
     <title>Panda Commerce</title>
   </head>
   <body>
@@ -46,7 +46,7 @@
                             <h2>Cool Dude Headphone</h2>
                             <p>This is the best headphone in the world for people who just want to waste time in front of funky world.</p>
                             <h1>400$</h1>
-                            <div class="btn btn-warning btn-lg">Buy Now</div>
+                            <div class="btn buy-now btn-lg">Buy Now</div>
                         </div>
                         <div class="col-lg-5">
                             <img src="images/banner-images/headphone.png" class="d-block w-100" alt="...">
@@ -59,7 +59,7 @@
                             <h2>Mega LCD TV For Sports</h2>
                             <p>This is the best headphone in the world for people who just want to waste time in front of funky world.</p>
                             <h1>700$</h1>
-                            <div class="btn btn-warning btn-lg">Buy Now</div>
+                            <div class="btn buy-now btn-lg">Buy Now</div>
                         </div>
                         <div class="col-lg-5">
                             <img src="images/banner-images/tv.png" class="d-block w-100" alt="...">
@@ -72,7 +72,7 @@
                             <h2>Mega LCD TV For Sports</h2>
                             <p>This is the best headphone in the world for people who just want to waste time in front of funky world.</p>
                             <h1>700$</h1>
-                            <div class="btn btn-warning btn-lg">Buy Now</div>
+                            <div class="btn buy-now btn-lg">Buy Now</div>
                         </div>
                         <div class="col-lg-5">
                             <img src="images/banner-images/xbox.png" class="d-block w-100" alt="...">
@@ -96,25 +96,25 @@
     <main>
         <!-- catagories start -->
         <section>
-            <div class="container overflow-hidden my-5">
-                <div class="row g-1">
+            <div class="container overflow-hidden my-5 catagories">
+                <div class="row g-4">
                     <!-- single catagory -->
                   <div class="col-lg-4 col-sm-12 col-md-6">
-                    <div class="p-2 border bg-success rounded-3 d-flex align-items-center justify-content-around">
+                    <div class="p-2 border catagories-watch rounded-3 d-flex align-items-center justify-content-around">
                         <h1 class="text-white ms-3">Watch</h1>
                         <img  class="me-2" src="images/categories/watch.png" alt="">
                     </div>
                   </div>
                     <!-- single catagory -->
                     <div class="col-lg-4 col-sm-12 col-md-6">
-                      <div class="p-2 border bg-primary rounded-3 d-flex align-items-center justify-content-around">
+                      <div class="p-2 border catagories-bag rounded-3 d-flex align-items-center justify-content-around">
                           <h1 class="text-white ms-3">Shoes</h1>
                           <img  class="me-2" src="images/categories/shoes.png" alt="">
                       </div>
                     </div>
                       <!-- single catagory -->
                     <div class="col-lg-4 col-sm-12 col-md-6">
-                          <div class="p-2 border bg-info rounded-3 d-flex align-items-center justify-content-around">
+                          <div class="p-2 border catagories-shoe rounded-3 d-flex align-items-center justify-content-around">
                               <h1 class="text-white ms-3">Bags</h1>
                               <img  class="me-2" src="images/categories/bag.png" alt="">
                           </div>
@@ -135,7 +135,7 @@
                          <h3 class="card-title">Supply 350</h3>
                          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional.</p>
                          <h3>450$</h3>
-                         <div class="btn btn-warning btn-lg">Buy Now</div>
+                         <div class="btn buy-now btn-lg">Buy Now</div>
                        </div>
                      </div> 
                 </div>
@@ -146,7 +146,7 @@
                           <h5 class="card-title">Nike 360</h5>
                           <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
                           <h3>450$</h3>
-                          <div class="btn btn-warning btn-lg">Buy Now</div>
+                          <div class="btn buy-now btn-lg">Buy Now</div>
                         </div>
                       </div>
                 </div>
@@ -157,7 +157,7 @@
                           <h5 class="card-title">Red Airmax</h5>
                           <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional.</p>
                           <h3>400$</h3>
-                          <div class="btn btn-warning btn-lg">Buy Now</div>
+                          <div class="btn buy-now btn-lg">Buy Now</div>
                         </div>
                       </div>
                 </div>
@@ -176,7 +176,7 @@
                          <h3 class="card-title">Supply 350</h3>
                          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional.</p>
                          <h3>450$</h3>
-                         <div class="btn btn-primary btn-lg">Buy Now</div>
+                         <div class="btn buy-now btn-lg">Buy Now</div>
                        </div>
                      </div> 
                 </div>
@@ -187,7 +187,7 @@
                           <h5 class="card-title">Nike 360</h5>
                           <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
                           <h3>450$</h3>
-                          <div class="btn btn-primary btn-lg">Buy Now</div>
+                          <div class="btn buy-now btn-lg">Buy Now</div>
                         </div>
                       </div>
                 </div>
@@ -198,7 +198,7 @@
                           <h5 class="card-title">Red Airmax</h5>
                           <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional.</p>
                           <h3>400$</h3>
-                          <div class="btn btn-primary btn-lg">Buy Now</div>
+                          <div class="btn buy-now btn-lg">Buy Now</div>
                         </div>
                       </div>
                 </div>
@@ -215,7 +215,7 @@
             <div class="mb-3">
               <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
             </div>
-            <button type="submit" class="btn btn-warning btn-lg">Submit</button>
+            <button type="submit" class="btn buy-now btn-lg">Submit</button>
           </form>
 
           </div>
